waitForPageLoad()